--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 30 18:49:18 EST 2015
-sdk.dir=C\:\\Users\\daykm\\AppData\\Local\\Android\\sdk
+#Sat Dec 19 15:05:48 EST 2015
+sdk.dir=C\:\\Users\\Leks\\AppData\\Local\\Android\\sdk
